Fixed menu/navbar issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
   .job-header {
     text-align: center;
   }
+
+  .navbar-left {
+    display: inline;
+  }
 }
 
 body {
